# avatar-poc

./: .gitignore  app.py  environment.ipynb  pyproject.toml
docs/: architecture.md  overview.md
notebooks/: pipper_sadtalker.ipynb
scripts/: setup_pipper.sh  setup_sadtalker.sh
src/avatar_poc/: gradio_app.py
src/avatar_poc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/avatar_poc/tts/pipper/: main.py
src/avatar_poc/vidgen/sadtalker/: main.py
