[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "avatar-poc"
version = "0.1.0"
description = "Open-source implementation of interactive avatars."
authors = [{ name = "Georgios Douzas", email = "gdouzas@qualco.eu" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["gradio>=5.38.1"]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]